# adj-ref-lib-py

./: NOTICE  README.md  pyproject.toml
.gitea/workflows/: publish.yml
src/adj_manifest/: __init__.py  condition_quality.py  entries.py  scoring.py  store.py
tests/: test_pr_merge_journal.py
