[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adj-manifest"
version = "0.1.0"
description = "Python reference implementation of the Agent Deliberation Journal (ADJ)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "David H. Friedel Jr.", email = "dev@ai-manifests.org" }
]
maintainers = [
    { name = "MarketAlly Pte Ltd", email = "dev@ai-manifests.org" }
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://adp-manifest.dev"
Repository = "https://github.com/ai-manifests/adj-ref-lib-py"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
